@@ -40,6 +40,8 @@
 
 * The PathFilter class now has a changedSignal(), which issues notifications when the filter is changed in some way. The Path class uses this to correctly trigger its own pathChangedSignal()
 
+* The CheckBox class now has setText() and getText() accessors.
+
 0.26.0
 ------
 
